# one-click-compress

./: .gitignore  README.md  demo.py  main.py  pyproject.toml  requirements.txt
compression/: compress.py  distill.py  prepare_resnet50.py
eval/: argmax_accuracy.py  eval_suite.py  live_yolo.py  results.md
results/: agent_trace.json
src/: agent.py  clip_wrapper.py  evaluator.py  main.py  pareto.py  scanner.py  trace.py  visualize.py
src/quantizers/: __init__.py  base.py  bnb.py  pytorch_native.py
ui/: app.py  blob_widget.py  compress_button.py  compression_card.py  info_panel.py  resources.py  styles.py
