[project]
name = "one-click-compress"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "executorch==1.1.0",
    "huggingface-hub>=1.4.1",
    "PyQt6>=6.6.0",
    "torch>=2.10.0",
    "torchao==0.15.0",
    "torchvision>=0.22.0",
    "ultralytics>=8.3.0",
]
